# Charcoal

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  TODO.md  a.txt
.github/workflows/: lint.yml  rust.yml
examples/: advanced_music_bot.rs  basic_music_bot.rs
src/: actions.rs  background.rs  connector.rs  constants.rs  helpers.rs  lib.rs  logger.rs  serenity.rs  wasm_helper.rs
src/actions/: awaiters.rs  channel_manager.rs  helpers.rs  player.rs  standard.rs  track_manager.rs
src/background/: actions.rs  connector.rs  processor.rs
src/background/actions/: channel_manager.rs  player.rs  track_manager.rs
src/wasm_helper/: channel_manager_wasm.rs  core_wasm.rs  player_wasm.rs  track_manager_wasm.rs
