[package]
name = "charcoal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fern = { version = "0.6.2", features = ['colored'] }
humantime = "2.1.0"
log = "0.4.17"
nanoid = "0.4.0"
openssl = "0.10.52"
serenity = "0.11.5"
serde_derive = "1.0.160"
serde = "1.0.160"
snafu = "0.7.4"
serde_json = "1.0.96"
async-trait = "0.1.68"
futures = "0.3.28"
lazy_static = "1.4.0"
tokio = { version = "1.28.1", features = ['full'] }
rdkafka = "0.31.0"

[dependencies.hearth-interconnect]
git = "https://github.com/Hearth-Industries/hearth-interconnect.git"
