[package]
name = "charcoal-client"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Hearth-Industries/Charcoal"
documentation = "https://docs.rs/charcoal-client"
license = "MIT"
description = "Client library for Hearth: A LavaLink alternative with 30X Higher performance"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fern = { version = "0.6.2", features = ['colored'] }
humantime = "2.1.0"
log = "0.4.17"
nanoid = "0.4.0"
openssl = "0.10.52"
serenity = "0.11.5"
serde_derive = "1.0.160"
serde = "1.0.160"
snafu = "0.7.4"
serde_json = "1.0.96"
async-trait = "0.1.68"
futures = "0.3.28"
lazy_static = "1.4.0"
tokio = { version = "1.28.1", features = ['full'] }
kafka = "0.9.0"
env_logger = "0.10.0"
async_fn_traits = "0.1.1"
hearth-interconnect = "0.1.0"
